--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body{
     --opacidad-negro: 0.5;
-    background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url("maxres.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url("img/maxres.jpg");
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
@@ -42,27 +42,56 @@ li a{
 }
 .titulo{
     margin-top: 4%;
-    text-align:center;
     font-family: impact;
     color: #008080;
+    margin-left: 44%;
 }
 #partes{
     background: white;
     width: 50%;
-  
     margin-left: 25%;
     margin-top: 10%;
     border-radius: 25px;
     border: 5px solid #008080;
-   
 }
 #me{
     float: left;
     border-radius: 25px;
     border: 2px solid black;
     margin-left: 1%;  
-    margin-right: 1%;  
+    margin-right: 4%;  
 }
 #texto{
-margin-left:8%;
+    font-family: fantasy;
+    margin-top: 3%;
+    
   }
+#contenedoriconos{
+    text-align: center;
+    margin-right: 6%;
+    padding: 3%;
+}
+#iconos{
+   margin-top: 2%;
+   margin-right: 3%;
+  }
+#imgproyectos{
+    border-radius: 25px;
+    border: 2px solid black;
+    margin-left: 1%;  
+    margin-right: 4%;  
+}
+#tittles{
+    text-align: center; 
+    margin-top: 4%;
+    font-family: impact;
+    color: #008080;
+}
+#proyectos{
+    text-align: center; 
+    margin: 2%;
+    border-radius: 25px;
+    border: 2px solid black;
+    width: 300px;
+    padding: 2%;
+}
