--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body{
     background-position: center top;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    
+    padding: 1%;
 }
 
 
@@ -16,6 +16,7 @@ body{
     background: white;
     border-top:2px solid #008080;
     border-bottom:2px solid #008080;
+    margin-left: -1%;
     
 }
 /* ul li{
@@ -53,6 +54,7 @@ li a{
     margin-top: 10%;
     border-radius: 25px;
     border: 5px solid #008080;
+    padding: 2%;
 }
 #me{
     float: left;
@@ -94,4 +96,38 @@ li a{
     border: 2px solid black;
     width: 300px;
     padding: 2%;
+}
+#texto1{
+    font-family: fantasy;
+    margin-top: 3%;
+    margin-left: 20%;
+}
+#botoncertificados{
+  
+    width: 100px;
+}
+#procesos{
+    font-family: fantasy;
+    margin-left: 20%;
+    border-radius: 9px;
+    border: 2px solid black;
+    width: 110px;
+    padding: 5px 10px;
+}
+#acertificado{
+    margin-left: 20%;
+    display: block;
+    width: 140px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    border-radius: 10px;
+    padding: 5px 30px;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+}
+#acertificado:hover{
+    background-color: transparent;
+    border: 2px solid black;
+    color: black;
 }
