--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body{
+body {
     --opacidad-negro: 0.5;
     background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url("img/maxres.jpg");
     background-size: cover;
@@ -6,6 +6,7 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding: 1%;
+    padding-bottom: 10%;
 }
 
 
@@ -13,12 +14,15 @@ body{
     position: fixed;
     top: 0%;
     width: 100%;
+    height: 8%;
     background: white;
-    border-top:2px solid #008080;
-    border-bottom:2px solid #008080;
+    border-top: 2px solid #008080;
+    border-bottom: 2px solid #008080;
     margin-left: -1%;
-    
+    text-align: center;
+    padding: 15px 30px;
 }
+
 /* ul li{
     display:inline-block;
     text-align:center;
@@ -28,85 +32,104 @@ body{
     color:rgb(10, 10, 10);
      background-color: aliceblue;
     } */
-#a{
-        width: 75%;
-        font-size: 200%;
-        font-family: impact;
-        color: #008080;
-}
-li a{
-    color: #008080;
-  }
-#elementos{
+#nav a {
+    width: 75%;
+    font-size: 150%;
     font-family: impact;
     color: #008080;
+   margin-right: 12px;
 }
-.titulo{
+
+li a {
+    color: #008080;
+}
+
+#elementos {
+    font-family: impact;
+    color: #008080;
+    outline: none;
+    text-decoration: none;
+    font-size: 20px
+}
+
+.titulo {
     margin-top: 4%;
     font-family: impact;
     color: #008080;
     margin-left: 44%;
 }
-#partes{
+
+#partes {
     background: white;
     width: 50%;
     margin-left: 25%;
-    margin-top: 10%;
+    margin-top: 8%;
     border-radius: 25px;
     border: 5px solid #008080;
-    padding: 2%;
+    padding: 4%;
 }
-#me{
-    float: left;
+#me {
     border-radius: 25px;
     border: 2px solid black;
-    margin-left: 1%;  
-    margin-right: 4%;  
+    width: 100%;
+    margin-top: 15px;
 }
-#texto{
+
+#texto {
     font-family: fantasy;
     margin-top: 3%;
-    
-  }
-#contenedoriconos{
+    text-align: left;
+}
+
+#contenedoriconos {
     text-align: center;
-    margin-right: 6%;
+ 
     padding: 3%;
 }
-#iconos{
-   margin-top: 2%;
-   margin-right: 3%;
-  }
-#imgproyectos{
+
+#iconos {
+    margin-top: 2%;
+    margin-right: 3%;
+}
+
+#imgproyectos {
     border-radius: 25px;
     border: 2px solid black;
-    margin-left: 1%;  
-    margin-right: 4%;  
+    margin-left: 1%;
+    margin-right: 4%;
 }
-#tittles{
-    text-align: center; 
+
+#tittles {
+    text-align: center;
     margin-top: 4%;
     font-family: impact;
     color: #008080;
 }
-#proyectos{
-    text-align: center; 
+
+#proyectos {
+    text-align: center;
     margin: 2%;
-    border-radius: 25px;
-    border: 2px solid black;
     width: 300px;
     padding: 2%;
 }
-#texto1{
+#proyectos h4 {
+    font-family: fantasy;
+    margin-top: 3%;
+    text-align: center;
+}
+
+#texto1 {
     font-family: fantasy;
     margin-top: 3%;
     margin-left: 20%;
 }
-#botoncertificados{
-  
+
+#botoncertificados {
+
     width: 100px;
 }
-#procesos{
+
+#procesos {
     font-family: fantasy;
     margin-left: 20%;
     border-radius: 9px;
@@ -114,7 +137,8 @@ li a{
     width: 110px;
     padding: 5px 10px;
 }
-#acertificado{
+
+#acertificado {
     margin-left: 20%;
     display: block;
     width: 140px;
@@ -126,8 +150,33 @@ li a{
     color: white;
     text-decoration: none;
 }
-#acertificado:hover{
+
+#acertificado:hover {
     background-color: transparent;
     border: 2px solid black;
     color: black;
+}
+
+#contenedorlenguajes {
+    margin-left: 15%;
+}
+
+#contenedorlenguajes img {
+    padding: 2%;
+    width: 10%;
+    margin-left: 4%;
+}
+
+#contenedorcontact {
+    font-size: x-large;
+    margin-left: 17%;
+    padding: 3%;
+}
+#contenedorcontact a {
+    outline: none;
+    text-decoration: none;
+    color: #008080;
+}
+#contenedorcontact a:hover {
+    text-decoration: underline;
 }
