--- a/index.css
+++ b/index.css
@@ -180,7 +180,15 @@ i svg{
         font-size: 70%;
     }
     #pcertificados{
-        margin-left: 20%;
+        margin-left: 10%;
         font-size: small;
     }
+    #partes{
+        margin: 100px 5% 0 ;
+      }
   }
+  @media screen and (min-width: 640px) and (max-width: 1280px) {
+  #partes{
+    margin: 100px 5% 0 ;
+  }
+}
