--- a/index.css
+++ b/index.css
@@ -183,11 +183,24 @@ i svg{
         font-size: 70%;
     }
     #pcertificados{
-        margin-left: 19%;
+        margin: 10px 5% 0 ;
         font-size: small;
     }
     #partes{
         margin: 100px 5% 0 ;
+        
+      }
+      #texto1{
+        margin: 10px 5% 0 ;
+        font-size:medium;
+      }
+      #procesos{
+        margin: 10px 5% 0 ;
+
+      }
+      #contenedorcontact {
+        margin: 10px 5% 0 ;
+        font-size:medium;
       }
   }
   @media screen and (min-width: 640px) and (max-width: 1280px) {
