--- a/index.css
+++ b/index.css
@@ -203,6 +203,11 @@ i svg{
         font-size:medium;
       }
   }
+  @media screen and (max-width: 250px) {
+    #texto1{
+        font-size:small;
+    }
+  }
   @media screen and (min-width: 640px) and (max-width: 1280px) {
   #partes{
     margin: 100px 5% 0 ;
