--- a/index.css
+++ b/index.css
@@ -212,6 +212,16 @@ i svg{
     }
     
   }
+   @media screen and (max-width: 287px) {
+    #nav a {
+        font-size:smaller;
+        
+       
+    }
+    #nav{
+        height: 60px;
+    }
+   }
   @media screen and (min-width: 640px) and (max-width: 1280px) {
   #partes{
     margin: 100px 5% 0 ;
