--- a/index.css
+++ b/index.css
@@ -25,12 +25,12 @@ body {
 
 #nav a {
     display: inline;
-    width: 75%;
     font-size: 150%;
     font-family: impact;
     color: #008080;
     outline: none;
     text-decoration: none;
+    margin-right: 2%;
 }
 
 li a {
@@ -169,9 +169,12 @@ i svg{
     width: 30px;
 }
 @media screen and (max-width: 640px) {
+    #nav {
+       
+        height: 60px;
+      }
     #nav a {
         font-size: medium;
-        width: 0%;
        
     }
     #contenedorlenguajes {
@@ -206,19 +209,15 @@ i svg{
         font-size:medium;
       }
       
-      #nav {
-        padding: 1px;
-        height: 40px;
-      }
+      
   }
 
-   @media screen and (max-width: 287px) {
+   @media screen and (max-width: 350px) {
     #nav a {
-        font-size:smaller;
-        
-       
+        font-size:small; 
     }
     #nav{
+        padding: 4% 0%;
         height: 60px;
     }
    }
